bdr.BDR2.scala.code
var instruction : String = " "
var x=1
while(x==1) {
  instruction=litMessage()
  instruction match {
    "R" => droite(); avance()
    "L" => gauche(); avance()
    "I" => droite(); droite(); avance()
    "A" => avance()
    "B" => avance(2)
    "C" => avance(3)
    "D" => avance(4)
    "E" => avance(5)
    "F" => avance(6)
    "Z" => recule()
    "Y" => recule(2)
    "X" => recule(3)
    "W" => recule(4)
    "V" => recule(5)
    "U" => recule(6)
    "_" => x=0
  }